# Advanced_Topics_Group1

./: .gitignore  README (1).md  README.md  case_data_EDA.py  caselaw_eda.py  download_db.py  pyproject.toml  requirements.txt
EDA/: updated_caselaw_eda.py
RAG/: 2_vector_db_setup.py  baseline_llm.py  evaluation.py  evaluation_results.json  evaluation_results_chromadb-10k.json  evaluation_results_chromadb.json  expanded_test_baseline_results.json  expanded_test_rag_results.json  mode_comparison.json  rag_system.py  retrieval.py  test_baseline_results.json  test_rag_results.json  vector_db_index.faiss  vector_db_setup.py  web_interface.py
configs/: config.yaml
data/chroma_db/f7a1cb74-5a58-4dd6-bf7f-ad310e5d104b/: index_metadata.pickle
logs/: smoke_test_w2.txt
pipeline/: README.md  build_index.py  compute_embeddings.py  config_loader.py  inspect_schema.py  process_corpus.py  query_decomp_test.py  query_decomposer.py  retrieval_chroma.py  smoke_test.py
