[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-rag"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pipeline*",
    "generation*",
    "evaluation*",
    "api*",
]
exclude = [
    "EDA*",
    "RAG*",
    "logs*",
    "data*",
    "configs*",
    "notebooks*",
    "frontend*",
    "scripts*",
    "graph*",
]